objects/PCM_MCM_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Tapeout_Date_FAB_9_and_FAB_10__c</fullName>
        <label>Actual Tapeout Date (FAB 9 and FAB 10)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Tapeout_Date__c</fullName>
        <formula>Device__r.Actual_Tapeout_Date_GMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Tapeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Burn_In_Platform__c</fullName>
        <label>Burn In Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10BIBZBIB*</fullName>
                </value>
                <value>
                    <fullName>ABES_IV</fullName>
                </value>
                <value>
                    <fullName>BI_10X</fullName>
                </value>
                <value>
                    <fullName>HPB3</fullName>
                </value>
                <value>
                    <fullName>HPB5</fullName>
                </value>
                <value>
                    <fullName>HPBI_150A</fullName>
                </value>
                <value>
                    <fullName>HPBI_300A</fullName>
                </value>
                <value>
                    <fullName>HPBI_75A</fullName>
                </value>
                <value>
                    <fullName>JTAG*</fullName>
                </value>
                <value>
                    <fullName>RI2000</fullName>
                </value>
                <value>
                    <fullName>WRPT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Report__c</fullName>
        <label>Cost Report</label>
        <summaryFilterItems>
            <field>MCM_Reporting_Data__c.Cost_Type__c</field>
            <operation>notEqual</operation>
            <value>Assembly &amp; Substrate Cost (before Yield)</value>
        </summaryFilterItems>
        <summaryForeignKey>MCM_Reporting_Data__c.MCM__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>PCM MCM Details</relationshipLabel>
        <relationshipName>PCM_MCM_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 4</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_DUTS__c</fullName>
        <label>Number of DUTS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Boards_Per_Platform__c</fullName>
        <label>Number of Boards Per Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Sockets_Per_Boards__c</fullName>
        <label>Number of Sockets Per Boards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Platform__c</fullName>
        <label>Test Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>66XX1K_M</fullName>
                </value>
                <value>
                    <fullName>66XX512_M</fullName>
                </value>
                <value>
                    <fullName>A595_M</fullName>
                </value>
                <value>
                    <fullName>DFT_M</fullName>
                </value>
                <value>
                    <fullName>PLLCC_M</fullName>
                </value>
                <value>
                    <fullName>ROOS_M</fullName>
                </value>
                <value>
                    <fullName>T33XX_M</fullName>
                </value>
                <value>
                    <fullName>TOB</fullName>
                </value>
                <value>
                    <fullName>UFLEX</fullName>
                </value>
                <value>
                    <fullName>UFLEX1024</fullName>
                </value>
                <value>
                    <fullName>UFLEX2048</fullName>
                </value>
                <value>
                    <fullName>HP93K_1K_M</fullName>
                </value>
                <value>
                    <fullName>J973_M</fullName>
                </value>
                <value>
                    <fullName>LLCC_M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Defined_Time__c</fullName>
        <inlineHelpText>Time in Seconds</inlineHelpText>
        <label>User Defined Time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PCM MCM Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MCM-{0000000}</displayFormat>
        <label>PCM MCM Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PCM MCM Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actual_tapeout_date_editable_fab9_10</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISNEW(),NOT(ISNEW())), 
ISBLANK(Actual_Tapeout_Date_FAB_9_and_FAB_10__c), 
OR(TEXT( Device__r.Fab__c ) = &quot;FAB 9&quot;, 
TEXT(Device__r.Fab__c) = &quot;FAB 10&quot;))</errorConditionFormula>
        <errorDisplayField>Actual_Tapeout_Date_FAB_9_and_FAB_10__c</errorDisplayField>
        <errorMessage>Please populate Actual Tapeout Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_tapeout_date_not_editable_fab1To8</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(ISNEW(),ISCHANGED( Actual_Tapeout_Date_FAB_9_and_FAB_10__c)), 
NOT(ISBLANK(Actual_Tapeout_Date_FAB_9_and_FAB_10__c)), 

TEXT( Device__r.Fab__c ) &lt;&gt; &quot;FAB 9&quot;, 
TEXT(Device__r.Fab__c) &lt;&gt; &quot;FAB 10&quot;)</errorConditionFormula>
        <errorDisplayField>Actual_Tapeout_Date_FAB_9_and_FAB_10__c</errorDisplayField>
        <errorMessage>You can populate this actual tapeout date only from fab 9 or fab 10</errorMessage>
    </validationRules>
</CustomObject>